(no-ticket) Fix behaviour of corner-icons on small screens
The icons don't land in the center of the screen. Also the submission
heading doesn't break its line.

--- a/oioioi/base/static/common/responsive.css
+++ b/oioioi/base/static/common/responsive.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 1135px)
+@media screen and (max-width: 1240px)
 {
     .btn .toolbar-button-text
     {
@@ -8,14 +8,23 @@
 
     .corner-icons
     {
-        text-align: left !important;
-        left: 260px;
+        right: 40px;
     }
 
     /* because heading would be under buttons */
     .main-content h2, .main-content h3
     {
-        max-width: 250px;
+        max-width: 300px;
+    }
+}
+
+@media screen and (max-width: 820px)
+{
+    /* because icons would be on heading */
+    .corner-icons
+    {
+        text-align: left !important;
+        position: static !important;
     }
 }
 
